# business_plan_agents

./: .gitignore  .pre-commit-config.yaml  CURLY_BRACE_FIXES.md  README.md  business_plan.json  copier.sh  default_tasks.txt  main.py  output.txt  pyproject.toml  task_list.txt  test_agents.py  topic_extender.py  tox.ini
src/agent/: simple_agent.py  smart_agent.py
src/planner/: simple_planner.py  smart_planner.py
src/prompts/: prompt_collection.py
src/states/: state_collection.py
src/tools/: tool_collection.py
src/utils/: constants.py  logging.py  model_collection.py  utils.py
tests/: __init__.py  conftest.py  test_pydantic_parsers.py
tests/agent/: test_simple_agent.py  test_smart_agent.py
tests/planner/: test_simple_planner.py
tests/tools/: test_tool_collection.py
tests/utils/: test_utils.py
